--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "contagem_aniversario",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.3",
-    "parcel": "^2.8.3"
+    "@parcel/transformer-sass": "^2.14.2",
+    "parcel": "^2.14.2"
   }
 }
